Query Filters: Fix overflow CSS style
In showcase, the "Query Filters" only overflow horizontally, so overflow-x is used in place of overflow-y.

--- a/source/wp-content/themes/wporg-showcase-2022/src/style/style.scss
+++ b/source/wp-content/themes/wporg-showcase-2022/src/style/style.scss
@@ -195,7 +195,7 @@ a:where(:not(.wp-element-button)):focus-visible {
 /* Scroll the filter bar smaller screens. */
 @media (max-width: 889px) {
 	.wporg-query-filters {
-		overflow-y: scroll;
+		overflow-x: scroll;
 		max-width: 100%;
 	}
 }
